deploy: f99d9654990dc2841796b5233f9a3dfc8ef8d0ab

--- a/genindex.html
+++ b/genindex.html
@@ -242,8 +242,66 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#K"><strong>K</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#V"><strong>V</strong></a></div>
 </section>
+<section id="_" class="genindex-section">
+  <h2>_</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML._max_memory">_max_memory (lightbench.metrics.metrics.VRAM_NVML attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="D" class="genindex-section">
+  <h2>D</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.DEBUG">DEBUG (lightbench.metrics.metrics.PowerUsage attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.device_handle">device_handle (lightbench.metrics.metrics.VRAM_NVML attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="G" class="genindex-section">
+  <h2>G</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.get_average">get_average() (lightbench.metrics.metrics.PowerUsage method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge.get_score">get_score() (lightbench.metrics.llm_judge.LLMJudge method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="H" class="genindex-section">
+  <h2>H</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.handle">handle (lightbench.metrics.metrics.PowerUsage attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="K" class="genindex-section">
+  <h2>K</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.kill">kill() (lightbench.metrics.metrics.PowerUsage method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
 <section id="L" class="genindex-section">
   <h2>L</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
@@ -262,8 +320,22 @@
           <li><a href="lightbench.loaders.html#module-lightbench.loaders">module</a>
 </li>
         </ul></li>
+        <li>
+    lightbench.metrics.llm_judge
+
+        <ul>
+          <li><a href="lightbench.metrics.html#module-lightbench.metrics.llm_judge">module</a>
+</li>
+        </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    lightbench.metrics.metrics
+
+        <ul>
+          <li><a href="lightbench.metrics.html#module-lightbench.metrics.metrics">module</a>
+</li>
+        </ul></li>
         <li>
     lightbench.utils
 
@@ -271,6 +343,8 @@
           <li><a href="lightbench.utils.html#module-lightbench.utils">module</a>
 </li>
         </ul></li>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge">LLMJudge (class in lightbench.metrics.llm_judge)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -279,6 +353,16 @@
   <h2>M</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.measure_power">measure_power() (lightbench.metrics.metrics.PowerUsage method)</a>
+</li>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.measure_ttft">measure_ttft() (lightbench.metrics.metrics.TTFT method)</a>
+</li>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.measure_vram">measure_vram() (lightbench.metrics.metrics.VRAM_NVML method)</a>
+
+        <ul>
+          <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.measure_vram">(lightbench.metrics.metrics.VRAM_TORCH method)</a>
+</li>
+        </ul></li>
         <li>
     module
 
@@ -287,9 +371,81 @@
 </li>
           <li><a href="lightbench.loaders.html#module-lightbench.loaders">lightbench.loaders</a>
 </li>
+          <li><a href="lightbench.metrics.html#module-lightbench.metrics.llm_judge">lightbench.metrics.llm_judge</a>
+</li>
+          <li><a href="lightbench.metrics.html#module-lightbench.metrics.metrics">lightbench.metrics.metrics</a>
+</li>
           <li><a href="lightbench.utils.html#module-lightbench.utils">lightbench.utils</a>
 </li>
         </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="P" class="genindex-section">
+  <h2>P</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.power_samples">power_samples (lightbench.metrics.metrics.PowerUsage attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage">PowerUsage (class in lightbench.metrics.metrics)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="R" class="genindex-section">
+  <h2>R</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.reset">reset() (lightbench.metrics.metrics.VRAM_NVML method)</a>
+
+        <ul>
+          <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.reset">(lightbench.metrics.metrics.VRAM_TORCH method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="S" class="genindex-section">
+  <h2>S</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.streamer">streamer (lightbench.metrics.metrics.TTFT attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="T" class="genindex-section">
+  <h2>T</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.tokenizer">tokenizer (lightbench.metrics.metrics.TTFT attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT">TTFT (class in lightbench.metrics.metrics)</a>
+</li>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.ttft">ttft (lightbench.metrics.metrics.TTFT attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="V" class="genindex-section">
+  <h2>V</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML">VRAM_NVML (class in lightbench.metrics.metrics)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH">VRAM_TORCH (class in lightbench.metrics.metrics)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
