--- a/genindex.html
+++ b/genindex.html
@@ -242,13 +242,41 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#K"><strong>K</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#V"><strong>V</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#K"><strong>K</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#V"><strong>V</strong></a> | <a href="#W"><strong>W</strong></a> | <a href="#Y"><strong>Y</strong></a></div>
 </section>
 <section id="_" class="genindex-section">
   <h2>_</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML._max_memory">_max_memory (lightbench.metrics.metrics.VRAM_NVML attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="B" class="genindex-section">
+  <h2>B</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.BACKGROUND_GRAY">BACKGROUND_GRAY (lightbench.utils.Colors attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.BACKGROUND_LIGHT_BLUE">BACKGROUND_LIGHT_BLUE (lightbench.utils.Colors attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="C" class="genindex-section">
+  <h2>C</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors">Colors (class in lightbench.utils)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.CYAN_TEXT">CYAN_TEXT (lightbench.utils.Colors attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -277,6 +305,8 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge.get_score">get_score() (lightbench.metrics.llm_judge.LLMJudge method)</a>
+</li>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.GREEN_TEXT">GREEN_TEXT (lightbench.utils.Colors attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -388,9 +418,19 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.power_samples">power_samples (lightbench.metrics.metrics.PowerUsage attribute)</a>
 </li>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage">PowerUsage (class in lightbench.metrics.metrics)</a>
+</li>
+        <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_cyan">print_cyan() (lightbench.utils.Printer method)</a>
+</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage">PowerUsage (class in lightbench.metrics.metrics)</a>
+        <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_green">print_green() (lightbench.utils.Printer method)</a>
+</li>
+        <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_red">print_red() (lightbench.utils.Printer method)</a>
+</li>
+        <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_yellow">print_yellow() (lightbench.utils.Printer method)</a>
+</li>
+        <li><a href="lightbench.utils.html#lightbench.utils.Printer">Printer (class in lightbench.utils)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -399,6 +439,12 @@
 <section id="R" class="genindex-section">
   <h2>R</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.RED_TEXT">RED_TEXT (lightbench.utils.Colors attribute)</a>
+</li>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.RESET">RESET (lightbench.utils.Colors attribute)</a>
+</li>
+    </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.reset">reset() (lightbench.metrics.metrics.VRAM_NVML method)</a>
 
@@ -445,6 +491,26 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH">VRAM_TORCH (class in lightbench.metrics.metrics)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="W" class="genindex-section">
+  <h2>W</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.WHITE_TEXT">WHITE_TEXT (lightbench.utils.Colors attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="Y" class="genindex-section">
+  <h2>Y</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors.YELLOW_TEXT">YELLOW_TEXT (lightbench.utils.Colors attribute)</a>
 </li>
     </ul></td>
   </tr></table>
