--- a/genindex.html
+++ b/genindex.html
@@ -242,7 +242,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#K"><strong>K</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#V"><strong>V</strong></a> | <a href="#W"><strong>W</strong></a> | <a href="#Y"><strong>Y</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#K"><strong>K</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#V"><strong>V</strong></a> | <a href="#W"><strong>W</strong></a> | <a href="#Y"><strong>Y</strong></a></div>
 </section>
 <section id="_" class="genindex-section">
   <h2>_</h2>
@@ -272,10 +272,24 @@
   <h2>C</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="lightbench.utils.html#lightbench.utils.Colors">Colors (class in lightbench.utils)</a>
+        <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator.cleanup">cleanup() (lightbench.evaluators.code_evaluator.CodeEvaluator method)</a>
+
+        <ul>
+          <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator.cleanup">(lightbench.evaluators.evaluator.Evaluator method)</a>
 </li>
+          <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator.cleanup">(lightbench.evaluators.text_evaluator.TextEvaluator method)</a>
+</li>
+          <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.cleanup">(lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
+</li>
+          <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.cleanup">(lightbench.loaders.loader.LLMServiceLoader method)</a>
+</li>
+        </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator">CodeEvaluator (class in lightbench.evaluators.code_evaluator)</a>
+</li>
+        <li><a href="lightbench.utils.html#lightbench.utils.Colors">Colors (class in lightbench.utils)</a>
+</li>
         <li><a href="lightbench.utils.html#lightbench.utils.Colors.CYAN_TEXT">CYAN_TEXT (lightbench.utils.Colors attribute)</a>
 </li>
     </ul></td>
@@ -296,14 +310,32 @@
   </tr></table>
 </section>
 
+<section id="E" class="genindex-section">
+  <h2>E</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator">Evaluator (class in lightbench.evaluators.evaluator)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
 <section id="G" class="genindex-section">
   <h2>G</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.get_average">get_average() (lightbench.metrics.metrics.PowerUsage method)</a>
+        <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.generate">generate() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
+
+        <ul>
+          <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.generate">(lightbench.loaders.loader.LLMServiceLoader method)</a>
+</li>
+        </ul></li>
+        <li><a href="lightbench.loaders.html#lightbench.loaders.generation.Generation">Generation (class in lightbench.loaders.generation)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.get_average">get_average() (lightbench.metrics.metrics.PowerUsage method)</a>
+</li>
         <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge.get_score">get_score() (lightbench.metrics.llm_judge.LLMJudge method)</a>
 </li>
         <li><a href="lightbench.utils.html#lightbench.utils.Colors.GREEN_TEXT">GREEN_TEXT (lightbench.utils.Colors attribute)</a>
@@ -317,6 +349,24 @@
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.handle">handle (lightbench.metrics.metrics.PowerUsage attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="I" class="genindex-section">
+  <h2>I</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.is_local">is_local() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
+
+        <ul>
+          <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.is_local">(lightbench.loaders.loader.LLMServiceLoader method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.is_quantized">is_quantized() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -344,10 +394,54 @@
 </li>
         </ul></li>
         <li>
+    lightbench.evaluators.code_evaluator
+
+        <ul>
+          <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.code_evaluator">module</a>
+</li>
+        </ul></li>
+        <li>
+    lightbench.evaluators.evaluator
+
+        <ul>
+          <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.evaluator">module</a>
+</li>
+        </ul></li>
+        <li>
+    lightbench.evaluators.text_evaluator
+
+        <ul>
+          <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.text_evaluator">module</a>
+</li>
+        </ul></li>
+        <li>
     lightbench.loaders
 
         <ul>
           <li><a href="lightbench.loaders.html#module-lightbench.loaders">module</a>
+</li>
+        </ul></li>
+        <li>
+    lightbench.loaders.generation
+
+        <ul>
+          <li><a href="lightbench.loaders.html#module-lightbench.loaders.generation">module</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    lightbench.loaders.llama_loader
+
+        <ul>
+          <li><a href="lightbench.loaders.html#module-lightbench.loaders.llama_loader">module</a>
+</li>
+        </ul></li>
+        <li>
+    lightbench.loaders.loader
+
+        <ul>
+          <li><a href="lightbench.loaders.html#module-lightbench.loaders.loader">module</a>
 </li>
         </ul></li>
         <li>
@@ -357,8 +451,6 @@
           <li><a href="lightbench.metrics.html#module-lightbench.metrics.llm_judge">module</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     lightbench.metrics.metrics
 
@@ -373,7 +465,11 @@
           <li><a href="lightbench.utils.html#module-lightbench.utils">module</a>
 </li>
         </ul></li>
+        <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader">LLamaModelLoader (class in lightbench.loaders.llama_loader)</a>
+</li>
         <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge">LLMJudge (class in lightbench.metrics.llm_judge)</a>
+</li>
+        <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader">LLMServiceLoader (class in lightbench.loaders.loader)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -399,13 +495,39 @@
         <ul>
           <li><a href="lightbench.evaluators.html#module-lightbench.evaluators">lightbench.evaluators</a>
 </li>
+          <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.code_evaluator">lightbench.evaluators.code_evaluator</a>
+</li>
+          <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.evaluator">lightbench.evaluators.evaluator</a>
+</li>
+          <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.text_evaluator">lightbench.evaluators.text_evaluator</a>
+</li>
           <li><a href="lightbench.loaders.html#module-lightbench.loaders">lightbench.loaders</a>
+</li>
+          <li><a href="lightbench.loaders.html#module-lightbench.loaders.generation">lightbench.loaders.generation</a>
+</li>
+          <li><a href="lightbench.loaders.html#module-lightbench.loaders.llama_loader">lightbench.loaders.llama_loader</a>
+</li>
+          <li><a href="lightbench.loaders.html#module-lightbench.loaders.loader">lightbench.loaders.loader</a>
 </li>
           <li><a href="lightbench.metrics.html#module-lightbench.metrics.llm_judge">lightbench.metrics.llm_judge</a>
 </li>
           <li><a href="lightbench.metrics.html#module-lightbench.metrics.metrics">lightbench.metrics.metrics</a>
 </li>
           <li><a href="lightbench.utils.html#module-lightbench.utils">lightbench.utils</a>
+</li>
+        </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="N" class="genindex-section">
+  <h2>N</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.name">name() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
+
+        <ul>
+          <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.name">(lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
         </ul></li>
     </ul></td>
@@ -422,12 +544,20 @@
 </li>
         <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_cyan">print_cyan() (lightbench.utils.Printer method)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_green">print_green() (lightbench.utils.Printer method)</a>
 </li>
         <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_red">print_red() (lightbench.utils.Printer method)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator.print_summary">print_summary() (lightbench.evaluators.code_evaluator.CodeEvaluator method)</a>
+
+        <ul>
+          <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator.print_summary">(lightbench.evaluators.evaluator.Evaluator method)</a>
+</li>
+          <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator.print_summary">(lightbench.evaluators.text_evaluator.TextEvaluator method)</a>
+</li>
+        </ul></li>
         <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_yellow">print_yellow() (lightbench.utils.Printer method)</a>
 </li>
         <li><a href="lightbench.utils.html#lightbench.utils.Printer">Printer (class in lightbench.utils)</a>
@@ -444,12 +574,20 @@
 </li>
         <li><a href="lightbench.utils.html#lightbench.utils.Colors.RESET">RESET (lightbench.utils.Colors attribute)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.reset">reset() (lightbench.metrics.metrics.VRAM_NVML method)</a>
 
         <ul>
           <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.reset">(lightbench.metrics.metrics.VRAM_TORCH method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator.run">run() (lightbench.evaluators.code_evaluator.CodeEvaluator method)</a>
+
+        <ul>
+          <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator.run">(lightbench.evaluators.evaluator.Evaluator method)</a>
+</li>
+          <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator.run">(lightbench.evaluators.text_evaluator.TextEvaluator method)</a>
 </li>
         </ul></li>
     </ul></td>
@@ -470,6 +608,8 @@
   <h2>T</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator">TextEvaluator (class in lightbench.evaluators.text_evaluator)</a>
+</li>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.tokenizer">tokenizer (lightbench.metrics.metrics.TTFT attribute)</a>
 </li>
     </ul></td>
