--- a/genindex.html
+++ b/genindex.html
@@ -6,7 +6,7 @@
     function setColorMode(t){let e=document.documentElement;e.setAttribute("data-color-mode",t);let a=window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches,s=t;"auto"===t&&(s=a?"dark":"light"),"light"===s?(e.classList.remove("dark"),e.classList.add("light")):(e.classList.remove("light"),e.classList.add("dark"))}
     setColorMode(localStorage._theme||"auto");
   </script><link rel="stylesheet" type="text/css" href="_static/pygments.css?v=397bb51e" />
-    <link rel="stylesheet" type="text/css" href="_static/shibuya.css?v=c516b45e" />
+    <link rel="stylesheet" type="text/css" href="_static/shibuya.css?v=d0008d65" />
     <link media="print" rel="stylesheet" type="text/css" href="_static/print.css?v=20ff2c19" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -126,9 +126,15 @@ data-aria-dark="Switch to auto color mode">
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.DEBUG">DEBUG (lightbench.metrics.metrics.PowerUsage attribute)</a>
+
+      <ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.DEBUG">(lightbench.metrics.metrics.VRAM_TORCH attribute)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="lightbench.metrics.html#id0">device (lightbench.metrics.metrics.VRAM_TORCH attribute)</a>, <a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.device">[1]</a>
+</li>
       <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.device_handle">device_handle (lightbench.metrics.metrics.VRAM_NVML attribute)</a>
 </li>
   </ul></td>
@@ -475,5 +481,5 @@ data-aria-dark="Switch to auto color mode">
       <script src="_static/documentation_options.js?v=01f34227"></script>
       <script src="_static/doctools.js?v=9bcbadda"></script>
       <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
-      <script src="_static/shibuya.js?v=e2230717"></script></body>
+      <script src="_static/shibuya.js?v=1d2088d1"></script></body>
 </html>
