deploy: 15befa14ca608e2ae306872b7003896e4d4d5581

--- a/genindex.html
+++ b/genindex.html
@@ -106,8 +106,6 @@ data-aria-dark="Switch to auto color mode">
 </li>
         <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator.cleanup">(lightbench.evaluators.text_evaluator.TextEvaluator method)</a>
 </li>
-        <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.cleanup">(lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
-</li>
         <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.cleanup">(lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
       </ul></li>
@@ -151,12 +149,8 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.generate">generate() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
-
-      <ul>
-        <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.generate">(lightbench.loaders.loader.LLMServiceLoader method)</a>
+      <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.generate">generate() (lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
-      </ul></li>
       <li><a href="lightbench.loaders.html#lightbench.loaders.generation.Generation">Generation (class in lightbench.loaders.generation)</a>
 </li>
   </ul></td>
@@ -181,15 +175,7 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.is_local">is_local() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
-
-      <ul>
-        <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.is_local">(lightbench.loaders.loader.LLMServiceLoader method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.is_quantized">is_quantized() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
+      <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.is_local">is_local() (lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -250,13 +236,6 @@ data-aria-dark="Switch to auto color mode">
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
-    lightbench.loaders.llama_loader
-
-      <ul>
-        <li><a href="lightbench.loaders.html#module-lightbench.loaders.llama_loader">module</a>
-</li>
-      </ul></li>
-      <li>
     lightbench.loaders.loader
 
       <ul>
@@ -284,8 +263,6 @@ data-aria-dark="Switch to auto color mode">
         <li><a href="lightbench.utils.html#module-lightbench.utils">module</a>
 </li>
       </ul></li>
-      <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader">LLamaModelLoader (class in lightbench.loaders.llama_loader)</a>
-</li>
       <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge">LLMJudge (class in lightbench.metrics.llm_judge)</a>
 </li>
       <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader">LLMServiceLoader (class in lightbench.loaders.loader)</a>
@@ -322,8 +299,6 @@ data-aria-dark="Switch to auto color mode">
 </li>
         <li><a href="lightbench.loaders.html#module-lightbench.loaders.generation">lightbench.loaders.generation</a>
 </li>
-        <li><a href="lightbench.loaders.html#module-lightbench.loaders.llama_loader">lightbench.loaders.llama_loader</a>
-</li>
         <li><a href="lightbench.loaders.html#module-lightbench.loaders.loader">lightbench.loaders.loader</a>
 </li>
         <li><a href="lightbench.metrics.html#module-lightbench.metrics.llm_judge">lightbench.metrics.llm_judge</a>
@@ -339,12 +314,8 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.loaders.html#lightbench.loaders.llama_loader.LLamaModelLoader.name">name() (lightbench.loaders.llama_loader.LLamaModelLoader method)</a>
-
-      <ul>
-        <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.name">(lightbench.loaders.loader.LLMServiceLoader method)</a>
+      <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.name">name() (lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
