deploy: 59163bd4a1dc048729726ffc82647b459344e8f4

--- a/genindex.html
+++ b/genindex.html
@@ -56,6 +56,7 @@ data-aria-dark="Switch to auto color mode">
 
 <div class="genindex-jumpbox">
  <a href="#_"><strong>_</strong></a>
+ | <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
@@ -80,6 +81,18 @@ data-aria-dark="Switch to auto color mode">
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML._max_memory">_max_memory (lightbench.metrics.metrics.VRAM_NVML attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.avg_power">avg_power (lightbench.metrics.metrics.GenerationMetrics property)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.avg_vram">avg_vram (lightbench.metrics.metrics.GenerationMetrics property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -141,6 +154,10 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.end">end() (lightbench.metrics.metrics.GenerationMetrics method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator">Evaluator (class in lightbench.evaluators.evaluator)</a>
 </li>
   </ul></td>
@@ -152,6 +169,8 @@ data-aria-dark="Switch to auto color mode">
       <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.generate">generate() (lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
       <li><a href="lightbench.loaders.html#lightbench.loaders.generation.Generation">Generation (class in lightbench.loaders.generation)</a>
+</li>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics">GenerationMetrics (class in lightbench.metrics.metrics)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -275,8 +294,6 @@ data-aria-dark="Switch to auto color mode">
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.measure_power">measure_power() (lightbench.metrics.metrics.PowerUsage method)</a>
 </li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.measure_ttft">measure_ttft() (lightbench.metrics.metrics.TTFT method)</a>
-</li>
       <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.measure_vram">measure_vram() (lightbench.metrics.metrics.VRAM_NVML method)</a>
 
       <ul>
@@ -346,6 +363,8 @@ data-aria-dark="Switch to auto color mode">
 </li>
       <li><a href="lightbench.utils.html#lightbench.utils.Printer">Printer (class in lightbench.utils)</a>
 </li>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.put">put() (lightbench.metrics.metrics.GenerationMetrics method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -356,9 +375,11 @@ data-aria-dark="Switch to auto color mode">
 </li>
       <li><a href="lightbench.utils.html#lightbench.utils.Colors.RESET">RESET (lightbench.utils.Colors attribute)</a>
 </li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.reset">reset() (lightbench.metrics.metrics.VRAM_NVML method)</a>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.reset">reset() (lightbench.metrics.metrics.GenerationMetrics method)</a>
 
       <ul>
+        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.reset">(lightbench.metrics.metrics.VRAM_NVML method)</a>
+</li>
         <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.reset">(lightbench.metrics.metrics.VRAM_TORCH method)</a>
 </li>
       </ul></li>
@@ -378,7 +399,7 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.streamer">streamer (lightbench.metrics.metrics.TTFT attribute)</a>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.set_start_time">set_start_time() (lightbench.metrics.metrics.GenerationMetrics method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -388,13 +409,9 @@ data-aria-dark="Switch to auto color mode">
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator">TextEvaluator (class in lightbench.evaluators.text_evaluator)</a>
 </li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.tokenizer">tokenizer (lightbench.metrics.metrics.TTFT attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT">TTFT (class in lightbench.metrics.metrics)</a>
-</li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.TTFT.ttft">ttft (lightbench.metrics.metrics.TTFT attribute)</a>
+      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.ttft">ttft (lightbench.metrics.metrics.GenerationMetrics property)</a>
 </li>
   </ul></td>
 </tr></table>
