deploy: 5df1c42ea82eae616f9c18022d89c2e397d36e45

--- a/genindex.html
+++ b/genindex.html
@@ -55,48 +55,19 @@ data-aria-dark="Switch to auto color mode">
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#A"><strong>A</strong></a>
- | <a href="#B"><strong>B</strong></a>
+ <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
- | <a href="#D"><strong>D</strong></a>
- | <a href="#E"><strong>E</strong></a>
  | <a href="#G"><strong>G</strong></a>
- | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
- | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
- | <a href="#S"><strong>S</strong></a>
- | <a href="#T"><strong>T</strong></a>
- | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  | <a href="#Y"><strong>Y</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML._max_memory">_max_memory (lightbench.metrics.metrics.VRAM_NVML attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="A">A</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.avg_power">avg_power (lightbench.metrics.metrics.GenerationMetrics property)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.avg_vram">avg_vram (lightbench.metrics.metrics.GenerationMetrics property)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -112,53 +83,13 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator.cleanup">cleanup() (lightbench.evaluators.code_evaluator.CodeEvaluator method)</a>
-
-      <ul>
-        <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator.cleanup">(lightbench.evaluators.evaluator.Evaluator method)</a>
+      <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.cleanup">cleanup() (lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
-        <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator.cleanup">(lightbench.evaluators.text_evaluator.TextEvaluator method)</a>
-</li>
-        <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.cleanup">(lightbench.loaders.loader.LLMServiceLoader method)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator">CodeEvaluator (class in lightbench.evaluators.code_evaluator)</a>
-</li>
       <li><a href="lightbench.utils.html#lightbench.utils.Colors">Colors (class in lightbench.utils)</a>
 </li>
       <li><a href="lightbench.utils.html#lightbench.utils.Colors.CYAN_TEXT">CYAN_TEXT (lightbench.utils.Colors attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="D">D</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.DEBUG">DEBUG (lightbench.metrics.metrics.PowerUsage attribute)</a>
-
-      <ul>
-        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.DEBUG">(lightbench.metrics.metrics.VRAM_TORCH attribute)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#id0">device (lightbench.metrics.metrics.VRAM_TORCH attribute)</a>, <a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.device">[1]</a>
-</li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.device_handle">device_handle (lightbench.metrics.metrics.VRAM_NVML attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="E">E</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.end">end() (lightbench.metrics.metrics.GenerationMetrics method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator">Evaluator (class in lightbench.evaluators.evaluator)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -168,25 +99,11 @@ data-aria-dark="Switch to auto color mode">
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader.generate">generate() (lightbench.loaders.loader.LLMServiceLoader method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.loaders.html#lightbench.loaders.generation.Generation">Generation (class in lightbench.loaders.generation)</a>
 </li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics">GenerationMetrics (class in lightbench.metrics.metrics)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.get_average">get_average() (lightbench.metrics.metrics.PowerUsage method)</a>
-</li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge.get_score">get_score() (lightbench.metrics.llm_judge.LLMJudge method)</a>
-</li>
       <li><a href="lightbench.utils.html#lightbench.utils.Colors.GREEN_TEXT">GREEN_TEXT (lightbench.utils.Colors attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="H">H</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.handle">handle (lightbench.metrics.metrics.PowerUsage attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -199,45 +116,9 @@ data-aria-dark="Switch to auto color mode">
   </ul></td>
 </tr></table>
 
-<h2 id="K">K</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.kill">kill() (lightbench.metrics.metrics.PowerUsage method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    lightbench.evaluators
-
-      <ul>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators">module</a>
-</li>
-      </ul></li>
-      <li>
-    lightbench.evaluators.code_evaluator
-
-      <ul>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.code_evaluator">module</a>
-</li>
-      </ul></li>
-      <li>
-    lightbench.evaluators.evaluator
-
-      <ul>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.evaluator">module</a>
-</li>
-      </ul></li>
-      <li>
-    lightbench.evaluators.text_evaluator
-
-      <ul>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.text_evaluator">module</a>
-</li>
-      </ul></li>
       <li>
     lightbench.loaders
 
@@ -262,28 +143,12 @@ data-aria-dark="Switch to auto color mode">
 </li>
       </ul></li>
       <li>
-    lightbench.metrics.llm_judge
-
-      <ul>
-        <li><a href="lightbench.metrics.html#module-lightbench.metrics.llm_judge">module</a>
-</li>
-      </ul></li>
-      <li>
-    lightbench.metrics.metrics
-
-      <ul>
-        <li><a href="lightbench.metrics.html#module-lightbench.metrics.metrics">module</a>
-</li>
-      </ul></li>
-      <li>
     lightbench.utils
 
       <ul>
         <li><a href="lightbench.utils.html#module-lightbench.utils">module</a>
 </li>
       </ul></li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.llm_judge.LLMJudge">LLMJudge (class in lightbench.metrics.llm_judge)</a>
-</li>
       <li><a href="lightbench.loaders.html#lightbench.loaders.loader.LLMServiceLoader">LLMServiceLoader (class in lightbench.loaders.loader)</a>
 </li>
   </ul></td>
@@ -292,35 +157,15 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.measure_power">measure_power() (lightbench.metrics.metrics.PowerUsage method)</a>
-</li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.measure_vram">measure_vram() (lightbench.metrics.metrics.VRAM_NVML method)</a>
-
-      <ul>
-        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.measure_vram">(lightbench.metrics.metrics.VRAM_TORCH method)</a>
-</li>
-      </ul></li>
       <li>
     module
 
       <ul>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators">lightbench.evaluators</a>
-</li>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.code_evaluator">lightbench.evaluators.code_evaluator</a>
-</li>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.evaluator">lightbench.evaluators.evaluator</a>
-</li>
-        <li><a href="lightbench.evaluators.html#module-lightbench.evaluators.text_evaluator">lightbench.evaluators.text_evaluator</a>
-</li>
         <li><a href="lightbench.loaders.html#module-lightbench.loaders">lightbench.loaders</a>
 </li>
         <li><a href="lightbench.loaders.html#module-lightbench.loaders.generation">lightbench.loaders.generation</a>
 </li>
         <li><a href="lightbench.loaders.html#module-lightbench.loaders.loader">lightbench.loaders.loader</a>
-</li>
-        <li><a href="lightbench.metrics.html#module-lightbench.metrics.llm_judge">lightbench.metrics.llm_judge</a>
-</li>
-        <li><a href="lightbench.metrics.html#module-lightbench.metrics.metrics">lightbench.metrics.metrics</a>
 </li>
         <li><a href="lightbench.utils.html#module-lightbench.utils">lightbench.utils</a>
 </li>
@@ -339,31 +184,17 @@ data-aria-dark="Switch to auto color mode">
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage.power_samples">power_samples (lightbench.metrics.metrics.PowerUsage attribute)</a>
-</li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.PowerUsage">PowerUsage (class in lightbench.metrics.metrics)</a>
-</li>
       <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_cyan">print_cyan() (lightbench.utils.Printer method)</a>
 </li>
       <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_green">print_green() (lightbench.utils.Printer method)</a>
 </li>
-      <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_red">print_red() (lightbench.utils.Printer method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator.print_summary">print_summary() (lightbench.evaluators.code_evaluator.CodeEvaluator method)</a>
-
-      <ul>
-        <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator.print_summary">(lightbench.evaluators.evaluator.Evaluator method)</a>
+      <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_red">print_red() (lightbench.utils.Printer method)</a>
 </li>
-        <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator.print_summary">(lightbench.evaluators.text_evaluator.TextEvaluator method)</a>
-</li>
-      </ul></li>
       <li><a href="lightbench.utils.html#lightbench.utils.Printer.print_yellow">print_yellow() (lightbench.utils.Printer method)</a>
 </li>
       <li><a href="lightbench.utils.html#lightbench.utils.Printer">Printer (class in lightbench.utils)</a>
-</li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.put">put() (lightbench.metrics.metrics.GenerationMetrics method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -373,57 +204,9 @@ data-aria-dark="Switch to auto color mode">
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.utils.html#lightbench.utils.Colors.RED_TEXT">RED_TEXT (lightbench.utils.Colors attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="lightbench.utils.html#lightbench.utils.Colors.RESET">RESET (lightbench.utils.Colors attribute)</a>
-</li>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.reset">reset() (lightbench.metrics.metrics.GenerationMetrics method)</a>
-
-      <ul>
-        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML.reset">(lightbench.metrics.metrics.VRAM_NVML method)</a>
-</li>
-        <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH.reset">(lightbench.metrics.metrics.VRAM_TORCH method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.evaluators.html#lightbench.evaluators.code_evaluator.CodeEvaluator.run">run() (lightbench.evaluators.code_evaluator.CodeEvaluator method)</a>
-
-      <ul>
-        <li><a href="lightbench.evaluators.html#lightbench.evaluators.evaluator.Evaluator.run">(lightbench.evaluators.evaluator.Evaluator method)</a>
-</li>
-        <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator.run">(lightbench.evaluators.text_evaluator.TextEvaluator method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="S">S</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.set_start_time">set_start_time() (lightbench.metrics.metrics.GenerationMetrics method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="T">T</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.evaluators.html#lightbench.evaluators.text_evaluator.TextEvaluator">TextEvaluator (class in lightbench.evaluators.text_evaluator)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.GenerationMetrics.ttft">ttft (lightbench.metrics.metrics.GenerationMetrics property)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_NVML">VRAM_NVML (class in lightbench.metrics.metrics)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="lightbench.metrics.html#lightbench.metrics.metrics.VRAM_TORCH">VRAM_TORCH (class in lightbench.metrics.metrics)</a>
 </li>
   </ul></td>
 </tr></table>
